--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="text_inner_path">Path：内部ストレージ</string>
     <string name="text_none">none</string>
     <string name="text_external_path">Path：外部ストレージ</string>
-    <string name="text_get">取得</string>
+    <string name="text_reacquire">再取得</string>
     <string name="text_clear">クリア</string>
+    <string name="text_hint">ヒント</string>
 </resources>
